--- a/frontend/src/MatchingPage.css
+++ b/frontend/src/MatchingPage.css
@@ -362,4 +362,9 @@ h2 {
   margin-right: 5px;
 }
 
+.matching-attributes-input {
+  margin-top: 10px;
+}
+
+
 }
