--- a/frontend/src/Settings.css
+++ b/frontend/src/Settings.css
@@ -1,7 +1,6 @@
 /* Stuff for settings-page only */
 .settings-page {
     font-family: Arial, sans-serif;
-    padding: 20px;
     width: 100%;
     display: flex;
     min-height: 100vh;
